# AxPhotographyWorkflow

./: .gitignore
getImage/: IMPLEMENTATION_SUMMARY.md  KONIQ_FIX_SUMMARY.md  KONIQ_TROUBLESHOOTING.md  QUICK_REFERENCE.md  README.md  config.ini  download_rated_images.py  downloaded.json  example_usage.py  requirements.txt  setup_koniq_dataset.py
tools/: convert_camera_video.py  convert_species_data.py  copyJPGfromPreset.py  exif_tool.py  image_to_gif.py  images_to_video.py  kmlPositionTool.py  kmlTrackEditor.html  kml_ge_compat.py  organize_photos.py  read_pic_exif.py  tif2jpg.py
tools/birdnet/: birddata-cn.json  birdnet_analyze.py
tools/railway/: G2270.kml  _test_html_logic.js  geocode.py  kml_writer.py  pyproject.toml  railway_network.py  schedule_fetcher.py  stations_db.py  track_builder.py  train2kml.py
tools/railway/data/: stations.json
tools/railway/data/cache/: G1_2026-04-21.json  G2270_2026-04-18.json  osm_railway_27.00_113.50_29.00_116.50.json  osm_railway_37.00_116.00_39.00_117.50.json
tools/railway/output/: G1_default.kml  G1_dense100.kml  G1_dense50.kml  G1_dense500.kml  G1_snap.kml  G1_test.kml  G1_test_schedule.json  G2270.json  _slice_test.json
